--- a/views/home/reset/reset.jade
+++ b/views/home/reset/reset.jade
@@ -4,7 +4,7 @@ html(lang='en')
     block head
       title 孙超然的个人网站
 
-    include ../../includes/head
+    include ../../header
     script(src='/views/home/reset.min.js?#{cacheBreaker}')
 
   body
