--- a/views/home/signup/signupModal.jade
+++ b/views/home/signup/signupModal.jade
@@ -2,8 +2,8 @@
   .modal-dialog
     .modal-content.max-width-500
       form
-        .modal-header.text-center 注册
-        .modal-body.padding-horizontal-40
+        .modal-header.text-center.h3 注册
+        .modal-body.padding-h-40
           .form-group.input-group
             .input-group-addon
               i.fa.fa-envelope-o.min-width-30
