--- a/views/topNav.jade
+++ b/views/topNav.jade
@@ -1,5 +1,5 @@
 nav.navbar.navbar-default.navbar-fixed-top#topNav
-  .container
+  .container.navbar-inner
     .navbar-header#topNavHeader
 
       // 扩展按钮
