--- a/views/home/homeIndex.jade
+++ b/views/home/homeIndex.jade
@@ -6,23 +6,10 @@ block content
 
       .row
         .col-sm-12.col-md-2.hidden-sm.hidden-xs.margin-top-40
-          .list-group
-            a.list-group-item.h4(href='/')
-              i.fa.fa-home    首页
-            a.list-group-item.h4(href='/blog')
-              i.fa.fa-shopping-cart    博客
-            a.list-group-item.h4(href='/app')
-              i.fa.fa-shopping-cart    App
-            a.list-group-item.h4(href='/agencybuy')
-              i.fa.fa-shopping-cart    购买
-            a.list-group-item.h4(href='/chatroom')
-              i.fa.fa-comments    聊天室
-            a.list-group-item.h4(href='/game')
-              i.fa.fa-gamepad    小游戏
-            a.list-group-item.h4(href='/aboutme')
-              i.fa.fa-smile-o    关于我
+          include ../leftSideMenu
+
         .col-sm-12.col-md-10
-          .row
+          .rowx
             .col-md-12
               .h2.text-center Release Notes
               p v 0.1.0
