--- a/views/leftSideMenu.jade
+++ b/views/leftSideMenu.jade
@@ -1,15 +1,22 @@
-#leftSideMenu.list-group
+#leftSideMenu.list-group.left-side-menu
   a.list-group-item.h4(href='/')
-    i.fa.fa-home    首页
+    i.fa.fa-home
+    | 首页
   a.list-group-item.h4(href='/blog')
-    i.fa.fa-shopping-cart    博客
+    i.fa.fa-copy
+    | 博客
   a.list-group-item.h4(href='/app')
-    i.fa.fa-shopping-cart    App
-  a.list-group-item.h4(href='/agencybuy')
-    i.fa.fa-shopping-cart    购买
-  a.list-group-item.h4(href='/chatroom')
-    i.fa.fa-comments    聊天室
+    i.fa.fa-floppy-o
+    | App
+  a.list-group-item.h4(href='/buy')
+    i.fa.fa-shopping-cart
+    | 购买
+  a.list-group-item.h4(href='/chat')
+    i.fa.fa-comments
+    | 聊天
   a.list-group-item.h4(href='/game')
-    i.fa.fa-gamepad    小游戏
-  a.list-group-item.h4(href='/aboutme')
-    i.fa.fa-smile-o    关于我
+    i.fa.fa-gamepad
+    | 游戏
+  a.list-group-item.h4(href='/about')
+    i.fa.fa-smile-o
+    | 关于
